--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "cloudconvert": "^2.3.7",
     "clsx": "^2.1.1",
     "dxf-parser": "^1.1.2",
+    "form-data": "^4.0.1",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.452.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.15",
+    "next-connect": "^1.0.0",
+    "ocf-converter-sdk": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.9",
@@ -24,6 +31,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
