--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.9",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
